Fix text message not showing on safari

--- a/assets/globalstyles.css
+++ b/assets/globalstyles.css
@@ -54,6 +54,7 @@ body{
 
 
 .game-container canvas {
+    z-index: -1;
     image-rendering: pixelated;
 }
 
